--- a/package.json
+++ b/package.json
@@ -1,14 +1,303 @@
 {
-  "name": "akshara-sanchaya",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "tamil-char-count",
+  "version": "1.0.0",
+  "description": "Tamil character count utility for analyzing vowels and consonants in Tamil text.",
+  "source": "src/index.ts",
+  "main": "dist/index.cjs",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "rimraf dist && parcel build src/index.ts",
+    "check": "tsc",
+    "test": "jest",
+    "watch": "parcel watch",
+    "preversion": "npm run check && npm run test",
+    "version": "npm run build && git add dist",
+    "release": "git push && git push --tags"
+  },
+  "keywords": [
+    "character counter",
+    "Tamil characters",
+    "syllabification",
+    "syllables"
+  ],
+  "author": "Arunkumar Selvam",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/er-arunkumarselvam/tamil-char-count.git"
   },
   "devDependencies": {
-    "vite": "^4.4.5"
+    "@parcel/packager-ts": "^2.10.2",
+    "@parcel/transformer-typescript-types": "^2.10.2",
+    "@types/jest": "^29.5.7",
+    "jest": "^29.7.0",
+    "parcel": "^2.10.2",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2"
+  },
+  "bugs": {
+    "url": "https://github.com/er-arunkumarselvam/tamil-char-count/issues"
+  },
+  "homepage": "https://github.com/er-arunkumarselvam/tamil-char-count#readme",
+  "dependencies": {
+    "abortcontroller-polyfill": "^1.7.5",
+    "ansi-escapes": "^4.3.2",
+    "ansi-regex": "^5.0.1",
+    "ansi-styles": "^4.3.0",
+    "anymatch": "^3.1.3",
+    "argparse": "^1.0.10",
+    "babel-jest": "^29.7.0",
+    "babel-plugin-istanbul": "^6.1.1",
+    "babel-plugin-jest-hoist": "^29.6.3",
+    "babel-preset-current-node-syntax": "^1.0.1",
+    "babel-preset-jest": "^29.6.3",
+    "balanced-match": "^1.0.2",
+    "base-x": "^3.0.9",
+    "boolbase": "^1.0.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "browserslist": "^4.22.1",
+    "bs-logger": "^0.2.6",
+    "bser": "^2.1.1",
+    "buffer-from": "^1.1.2",
+    "callsites": "^3.1.0",
+    "camelcase": "^5.3.1",
+    "caniuse-lite": "^1.0.30001561",
+    "chalk": "^4.1.2",
+    "char-regex": "^1.0.2",
+    "chrome-trace-event": "^1.0.3",
+    "ci-info": "^3.9.0",
+    "cjs-module-lexer": "^1.2.3",
+    "cliui": "^8.0.1",
+    "clone": "^2.1.2",
+    "co": "^4.6.0",
+    "collect-v8-coverage": "^1.0.2",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "commander": "^7.2.0",
+    "concat-map": "^0.0.1",
+    "convert-source-map": "^2.0.0",
+    "cosmiconfig": "^8.3.6",
+    "create-jest": "^29.7.0",
+    "cross-spawn": "^7.0.3",
+    "css-select": "^5.1.0",
+    "css-tree": "^2.3.1",
+    "css-what": "^6.1.0",
+    "csso": "^5.0.5",
+    "debug": "^4.3.4",
+    "dedent": "^1.5.1",
+    "deepmerge": "^4.3.1",
+    "detect-libc": "^1.0.3",
+    "detect-newline": "^3.1.0",
+    "diff-sequences": "^29.6.3",
+    "dom-serializer": "^1.4.1",
+    "domelementtype": "^2.3.0",
+    "domhandler": "^4.3.1",
+    "domutils": "^2.8.0",
+    "dotenv": "^7.0.0",
+    "dotenv-expand": "^5.1.0",
+    "eastasianwidth": "^0.2.0",
+    "electron-to-chromium": "^1.4.576",
+    "emittery": "^0.13.1",
+    "emoji-regex": "^8.0.0",
+    "entities": "^3.0.1",
+    "error-ex": "^1.3.2",
+    "escalade": "^3.1.1",
+    "escape-string-regexp": "^2.0.0",
+    "esprima": "^4.0.1",
+    "execa": "^5.1.1",
+    "exit": "^0.1.2",
+    "expect": "^29.7.0",
+    "fast-json-stable-stringify": "^2.1.0",
+    "fb-watchman": "^2.0.2",
+    "fill-range": "^7.0.1",
+    "find-up": "^4.1.0",
+    "foreground-child": "^3.1.1",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "gensync": "^1.0.0-beta.2",
+    "get-caller-file": "^2.0.5",
+    "get-package-type": "^0.1.0",
+    "get-port": "^4.2.0",
+    "get-stream": "^6.0.1",
+    "glob": "^7.2.3",
+    "globals": "^11.12.0",
+    "graceful-fs": "^4.2.11",
+    "has-flag": "^4.0.0",
+    "hasown": "^2.0.0",
+    "html-escaper": "^2.0.2",
+    "htmlnano": "^2.1.0",
+    "htmlparser2": "^7.2.0",
+    "human-signals": "^2.1.0",
+    "import-fresh": "^3.3.0",
+    "import-local": "^3.1.0",
+    "imurmurhash": "^0.1.4",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "is-arrayish": "^0.2.1",
+    "is-core-module": "^2.13.1",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-generator-fn": "^2.1.0",
+    "is-glob": "^4.0.3",
+    "is-json": "^2.0.1",
+    "is-number": "^7.0.0",
+    "is-stream": "^2.0.1",
+    "isexe": "^2.0.0",
+    "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-instrument": "^6.0.1",
+    "istanbul-lib-report": "^3.0.1",
+    "istanbul-lib-source-maps": "^4.0.1",
+    "istanbul-reports": "^3.1.6",
+    "jackspeak": "^2.3.6",
+    "jest-changed-files": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-diff": "^29.7.0",
+    "jest-docblock": "^29.7.0",
+    "jest-each": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-get-type": "^29.6.3",
+    "jest-haste-map": "^29.7.0",
+    "jest-leak-detector": "^29.7.0",
+    "jest-matcher-utils": "^29.7.0",
+    "jest-message-util": "^29.7.0",
+    "jest-mock": "^29.7.0",
+    "jest-pnp-resolver": "^1.2.3",
+    "jest-regex-util": "^29.6.3",
+    "jest-resolve": "^29.7.0",
+    "jest-resolve-dependencies": "^29.7.0",
+    "jest-runner": "^29.7.0",
+    "jest-runtime": "^29.7.0",
+    "jest-snapshot": "^29.7.0",
+    "jest-util": "^29.7.0",
+    "jest-validate": "^29.7.0",
+    "jest-watcher": "^29.7.0",
+    "jest-worker": "^29.7.0",
+    "js-tokens": "^4.0.0",
+    "js-yaml": "^3.14.1",
+    "jsesc": "^2.5.2",
+    "json-parse-even-better-errors": "^2.3.1",
+    "json5": "^2.2.3",
+    "kleur": "^3.0.3",
+    "leven": "^3.1.0",
+    "lightningcss": "^1.22.0",
+    "lightningcss-win32-x64-msvc": "^1.22.0",
+    "lines-and-columns": "^1.2.4",
+    "lmdb": "^2.8.5",
+    "locate-path": "^5.0.0",
+    "lodash.memoize": "^4.1.2",
+    "lru-cache": "^5.1.1",
+    "make-dir": "^4.0.0",
+    "make-error": "^1.3.6",
+    "makeerror": "^1.0.12",
+    "mdn-data": "^2.0.30",
+    "merge-stream": "^2.0.0",
+    "micromatch": "^4.0.5",
+    "mimic-fn": "^2.1.0",
+    "minimatch": "^3.1.2",
+    "minipass": "^7.0.4",
+    "ms": "^2.1.2",
+    "msgpackr": "^1.9.9",
+    "msgpackr-extract": "^3.0.2",
+    "natural-compare": "^1.4.0",
+    "node-addon-api": "^7.0.0",
+    "node-gyp-build-optional-packages": "^5.1.1",
+    "node-int64": "^0.4.0",
+    "node-releases": "^2.0.13",
+    "normalize-path": "^3.0.0",
+    "npm-run-path": "^4.0.1",
+    "nth-check": "^2.1.1",
+    "nullthrows": "^1.1.1",
+    "once": "^1.4.0",
+    "onetime": "^5.1.2",
+    "ordered-binary": "^1.4.1",
+    "p-limit": "^3.1.0",
+    "p-locate": "^4.1.0",
+    "p-try": "^2.2.0",
+    "parent-module": "^1.0.1",
+    "parse-json": "^5.2.0",
+    "path-exists": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-key": "^3.1.1",
+    "path-parse": "^1.0.7",
+    "path-scurry": "^1.10.1",
+    "path-type": "^4.0.0",
+    "picocolors": "^1.0.0",
+    "picomatch": "^2.3.1",
+    "pirates": "^4.0.6",
+    "pkg-dir": "^4.2.0",
+    "postcss-value-parser": "^4.2.0",
+    "posthtml": "^0.16.6",
+    "posthtml-parser": "^0.10.2",
+    "posthtml-render": "^3.0.0",
+    "pretty-format": "^29.7.0",
+    "prompts": "^2.4.2",
+    "pure-rand": "^6.0.4",
+    "react-error-overlay": "^6.0.9",
+    "react-is": "^18.2.0",
+    "react-refresh": "^0.9.0",
+    "regenerator-runtime": "^0.13.11",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.22.8",
+    "resolve-cwd": "^3.0.0",
+    "resolve-from": "^5.0.0",
+    "resolve.exports": "^2.0.2",
+    "safe-buffer": "^5.2.1",
+    "semver": "^7.5.4",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^3.0.7",
+    "sisteransi": "^1.0.5",
+    "slash": "^3.0.0",
+    "source-map": "^0.6.1",
+    "source-map-js": "^1.0.2",
+    "source-map-support": "^0.5.13",
+    "sprintf-js": "^1.0.3",
+    "srcset": "^4.0.0",
+    "stable": "^0.1.8",
+    "stack-utils": "^2.0.6",
+    "string-length": "^4.0.2",
+    "string-width": "^4.2.3",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^6.0.1",
+    "strip-ansi-cjs": "^6.0.1",
+    "strip-bom": "^4.0.0",
+    "strip-final-newline": "^2.0.0",
+    "strip-json-comments": "^3.1.1",
+    "supports-color": "^7.2.0",
+    "supports-preserve-symlinks-flag": "^1.0.0",
+    "svgo": "^3.0.2",
+    "term-size": "^2.2.1",
+    "test-exclude": "^6.0.0",
+    "timsort": "^0.3.0",
+    "tmpl": "^1.0.5",
+    "to-fast-properties": "^2.0.0",
+    "to-regex-range": "^5.0.1",
+    "tslib": "^2.6.2",
+    "type-detect": "^4.0.8",
+    "type-fest": "^0.21.3",
+    "undici-types": "^5.26.5",
+    "update-browserslist-db": "^1.0.13",
+    "utility-types": "^3.10.0",
+    "v8-to-istanbul": "^9.1.3",
+    "walker": "^1.0.8",
+    "weak-lru-cache": "^1.2.2",
+    "which": "^2.0.2",
+    "wrap-ansi": "^7.0.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^4.0.2",
+    "y18n": "^5.0.8",
+    "yallist": "^3.1.1",
+    "yargs": "^17.7.2",
+    "yargs-parser": "^21.1.1",
+    "yocto-queue": "^0.1.0"
   }
 }
